tests/integration/snapshots/integration__commands__format__uglify_FLOAT_WITH_TRAILING_ZERO.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
1.0
stdout ---
1.0

stderr ---
