tests/integration/snapshots/integration__commands__format__uglify_NEGATIVE_FLOAT_WITH_EXPONENT.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
-98.25e12
stdout ---
-98.25e12

stderr ---
