tests/integration/snapshots/integration__commands__format__uglify_OBJECT_DUPLICATE_KEYS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
{"a": 1, "a": 2}
stdout ---
{"a":1,"a":2}

stderr ---
