tests/integration/snapshots/integration__commands__format__uglify_OBJECT_EMPTY_STRING_KEY.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
{"": "value"}
stdout ---
{"":"value"}

stderr ---
