tests/integration/snapshots/integration__commands__format__uglify_OBJECT_INLINE_SHORT_ARRAY_VALUE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
{"k":[1,2,3]}
stdout ---
{"k":[1,2,3]}

stderr ---
